testdata/error/same_commodity_cost.ledger
; Posting with amount and the same commodity cost.

2024/09/01 Shop
    Expenses                                     100 CHF @ 1 CHF
    Assets:Banks
